fixed layout bug

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -16,20 +16,23 @@ html, body, #root{
     background-repeat: no-repeat;
 
     .app {
-      width: 50%;;
+      width: 50%;
       height: 100%;
       display: flex;
       flex-direction: column;
       background-color: white;
       .messages{
         flex: 5;
+        height: 80%;
+        width: 80%;
+        margin: auto;
         
         .messages-header{
           text-align: center;
         }
         .messages-list{
           height: 80%;
-          overflow: scroll;
+          overflow: auto;
         }
       }
       .form-container{
